--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Information and website linkage platform</h1>
-<a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a>
+<p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
+<p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
 </body>
 </html>
