--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang = "en">
+<html>
 <head>
 <title>Static Link Page</title>
 </head>
@@ -8,6 +8,6 @@
 <p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
 <p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
 <p><a href="https://github.com/NZX37/python-deploy">NZX37</a></p>
-<p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
+<p><a href="https://forms.office.com/Pages/DesignPageV2.aspx?analysis=false&prevsubpage=design">Forms</a></p>
 </body>
 </html>
