--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
+<head>
+  <title>Static Link Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f0f0f0;
+    }
+    h1 {
+      color: #333;
+    }
+    a {
+      text-decoration: none;
+      color: #0066cc;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
 <!DOCTYPE HTML>
 <html>
 <head>
