--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
+<<!DOCTYPE HTML>
 <head>
   <title>Static Link Page</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f0f0f0;
-    }
-    h1 {
-      color: #333;
-    }
-    a {
-      text-decoration: none;
-      color: #0066cc;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    body {font-family: Arial, sans-serif;padding: 20px; background-color: #f0f0f0;}
+    h1 {color: #333;}
+    a {text-decoration: none; color: #0066cc;}
+    a:hover {text-decoration: underline;}
   </style>
 </head>
-<!DOCTYPE HTML>
 <html>
-<head>
-<title>Static Link Page</title>
-</head>
 <body>
 <h1>Information and website linkage platform</h1>
 <p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
