--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <title>Static Link Page</title>
   <style>
-    body {font-family: Arial, sans-serif;padding: 20px; background-color: #f0f0f0;}
-    h1 {color: #333;}
-    a {text-decoration: none; color: #0066cc;}
+    body {font-family: Helvetica, sans-serif;padding: 25px; background-color: #52e1c2;}
+    h1 {color: #01489b;}
+    a {text-decoration: none; color: #01489b;}
     a:hover {text-decoration: underline;}
   </style>
 </head>
