--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <<!DOCTYPE HTML>
 <head>
-  <title>Static Link Page</title>
-  <style>
-    body {font-family: Helvetica, sans-serif;padding: 25px; background-color: #52e1c2;}
-    h1 {color: #01489b;}
-    a {text-decoration: none; color: #01489b;}
-    a:hover {text-decoration: underline;}
-  </style>
+<title>Static Link Page</title>
 </head>
 <html>
-<body>
+<body style="background-color:#01489b;">
 <h1>Information and website linkage platform</h1>
 <p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
 <p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
