--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <<!DOCTYPE HTML>
+<html>
 <head>
-<title>Static Link Page</title>
+  <title>Static Link Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #01489B;
+    }
+    h1 {
+      color: #333;
+    }
+    a {
+      text-decoration: none;
+      color: #ffffff;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+</body>
+</html>
 <html>
 <body style="background-color:#01489b;">
 <h1>Information and website linkage platform</h1>
