--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       background-color: #01489B;
     }
     h1 {
-      color: #333;
+      color: #ffffff;
     }
     a {
       text-decoration: none;
