--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
 <head>
   <title>Static Link Page</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #01489B;
-    }
-    h1 {
-      color: #ffffff;
-    }
+    body {font-family: Arial, sans-serif;padding: 20px;}
+    h1 {color: #ffffff;}
     a {
       text-decoration: none;
       color: #ffffff;
@@ -24,7 +18,7 @@
 </html>
 <html>
 <body style="background-color:#01489b;">
-<h1>Information and website linkage platform</h1>
+<h1 style="color:#ffffff">Information and website linkage platform</h1>
 <p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
 <p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
 <p><a href="https://github.com/NZX37/python-deploy">NZX37</a></p>
