--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <title>Static Link Page</title>
   <style>
     body {font-family: Arial, sans-serif;padding: 20px;}
-    h1 {color: #ffffff;}
     a {
       text-decoration: none;
-      color: #ffffff;
+      color: #69a1fa;
     }
     a:hover {
       text-decoration: underline;
