--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
   <title>Static Link Page</title>
   <style>
     body {font-family: Arial, sans-serif;padding: 20px;}
-    a {
-      text-decoration: none;
-      color: #69a1fa;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    a {text-decoration: none;color: #69a1fa;}
+    a:hover {text-decoration: underline;color: #ffffff;}
   </style>
 </head>
 </body>
