--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {font-family: Arial, sans-serif;padding: 20px;}
     a {text-decoration: none;color: #69a1fa;}
-    a:hover {text-decoration: underline;color: #ffffff;}
+    a:hover {text-decoration: underline;color: #01489b;}
   </style>
 </head>
 </body>
