--- a/index.html
+++ b/index.html
@@ -17,5 +17,12 @@
 <p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
 <p><a href="https://github.com/NZX37/python-deploy">NZX37</a></p>
 <p><a href="https://forms.office.com/Pages/DesignPageV2.aspx?analysis=false&prevsubpage=design">Forms</a></p>
+<p><a href="https://www.youtube.com/watch?v=Mv54UfwYYos">Fusion 360 Day 7</a></p>
+<p><a href="https://www.khanacademy.org/science/ap-college-physics-1/xf557a762645cccc5:kinematics/xf557a762645cccc5:mathematical-models-of-motion/e/freefall-exercise-ap1-graphs-and-concepts">Khan Academy</a></p>
+<p><a href="https://drive.google.com/file/d/18MN5UY4VZu91kV93iTefEV-bMPp2YsLN/view">Physics text</a></p>
+<p><a href="https://sgphysicsleague.org/archives/2024/solutions.pdf#Simp">SPhL Archive</a></p>
+<p><a href="https://sgphysicsleague.org/data_sheet.pdf">SPhL Data Sheet</a></p>
+<p><a href="https://sgphysicsleague.org/problems">SPhL Website</a></p>
+<p><a href="https://imagecolorpicker.com/color-code/01489b">Color Picker</a></p>
 </body>
 </html>
