--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <html>
 <body style="background-color:#01489b;">
 <h1 style="color:#ffffff">Information and website linkage platform</h1>
+<h2 style="color:#198c6e>The following are hyperlinks to important websites</h2>
 <p><a href="https://www.edmundoptics.com/knowledge-center/application-notes/optics/optics-101-level-1-theoretical-foundations/#:~:text=Light%20is%20a%20type%20of%20electromagnetic">Optics 101</a></p>
 <p><a href="https://github.com/NUSHDev">NUSHDev</a></p>
 <p><a href="https://github.com/NZX37/python-deploy">NZX37</a></p>
