--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
 <head>
   <title>Static Link Page</title>
-  <style>
-    body {font-family: Arial, sans-serif;padding: 20px;}
-    a {text-decoration: none;color: #69a1fa;}
-    a:hover {text-decoration: underline;color: #000;}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 </body>
 </html>
