--- a/index.html
+++ b/index.html
@@ -3,46 +3,43 @@
 <head>
   <title>Static Link Page</title>
   <style>
-    /* Global styles from your original request */
     body {
-      background-color: #01489b;
-      color: #ffffff; /* Default text color for body */
-      font-family: sans-serif; /* A common, readable font */
-      padding: 20px; /* Add some padding around the content */
+      background-color: #ffffff;
+      color: #000000; 
+      font-family: impact;
+      padding: 20px;
     }
 
     h1 {
-      color: #ffffff;
-      font-size: 2.5em; /* Larger heading */
+      color: #000000;
+      font-size: 2.5em; 
       margin-bottom: 15px;
     }
 
     h2 {
-      color: #198c6e;
-      font-size: 1.8em; /* Slightly smaller heading */
+      color: #4300fc;
+      font-size: 1.8em; 
       margin-bottom: 25px;
     }
 
-    /* Styles for the links to look like buttons */
     .button-link {
       display: inline-block; /* Allows setting width, padding, etc. */
       background-color: #3498db; /* A nice blue button color */
-      color: white; /* White text for contrast */
-      padding: 10px 20px; /* Padding inside the button */
-      margin-bottom: 10px; /* Space between buttons */
-      text-decoration: none; /* Remove underline from links */
-      border-radius: 5px; /* Slightly rounded corners */
-      font-weight: bold; /* Bold text */
-      transition: background-color 0.3s ease; /* Smooth transition for hover effect */
-      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); /* Subtle shadow for depth */
+      color: white; 
+      padding: 10px 20px; 
+      margin-bottom: 10px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold; 
+      transition: background-color 0.5s ease;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     }
 
     .button-link:hover {
-      background-color: #2980b9; /* Darker blue on hover */
-      box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4); /* Slightly larger shadow on hover */
+      background-color: #2980b9; 
+      box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.4);
     }
 
-    /* Styles for different button colors */
     .button-blue { background-color: #3498db; }
     .button-blue:hover { background-color: #2980b9; }
 
