--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
   <h1>Information and website linkage platform</h1>
-  <h2>The following are hyperlinks to important websites</h2>
+  <h2>The following are hyperlinks to important websites :)</h2>
 
   <p><a href="#" class="button-link button-blue">Empty Link</a></p>
   <p><a href="https://github.com/NUSHDev" class="button-link button-green">NUSHDev</a></p>
