--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <title>Static Link Page</title>
   <style>
     body {
-      background-color: #ffffff;
-      color: #000000; 
-      font-family: impact;
+      background-color: #000000;
+      color: #ffffff; 
+      font-family: Arial, Helvetica, sans-serif;
       padding: 20px;
     }
 
     h1 {
-      color: #000000;
+      color: #ffffff;
       font-size: 2.5em; 
       margin-bottom: 15px;
     }
 
     h2 {
-      color: #4300fc;
+      color: #a8caff;
       font-size: 1.8em; 
       margin-bottom: 25px;
     }
